# RPG_Stat_Calculator

./: .gitignore  README.md  main.py  pyproject.toml
lib_stat/: __init__.py  dice.py
src/rpg_stat_calculator/dsa_roll/: __init__.py
src/rpg_stat_calculator/roll/: BaseRoll.py  DieRoll.py  MaxRoll.py  MinRoll.py  __init__.py  combiners.py  roll_types.py
